--- a/queries.css
+++ b/queries.css
@@ -36,8 +36,13 @@
 
 @media only screen and (max-width: 575px) {
     form {
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     .middle-center {
@@ -82,12 +87,16 @@
     }
 
     .bottom {
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     .income-section {
-        margin: 0;
         width: 98%;
     }
 
@@ -96,7 +105,6 @@
     }
 
     .expenses-section {
-        margin: 25px 0 0;
         width: 98%;
     }
 
